tests/baselines/reference/privateNamesNotAllowedAsParameters.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesNotAllowedAsParameters.ts(4,12): error TS1138: Parameter declaration expected.
tests/cases/conformance/classes/members/privateNames/privateNamesNotAllowedAsParameters.ts(4,24): error TS1005: ';' expected.
tests/cases/conformance/classes/members/privateNames/privateNamesNotAllowedAsParameters.ts(4,26): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/classes/members/privateNames/privateNamesNotAllowedAsParameters.ts(5,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/classes/members/privateNames/privateNamesNotAllowedAsParameters.ts (4 errors) ====
    // @target es6
    
    class A {
        setFoo(#foo: string) {}
               ~~~~
!!! error TS1138: Parameter declaration expected.
                           ~
!!! error TS1005: ';' expected.
                             ~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.
    